# remove-bg

./: Dockerfile  README.md  lambda_function.py  pyproject.toml  requirements.txt  test.py
